--- a/index.html
+++ b/index.html
@@ -5,6 +5,24 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ariels</title>
+    <meta http-equiv="Content-Language" content="en">
+    <meta name="author" content="Ariel Sidney Castro Garcés">
+    <link rel="canonical" href="https://ariels.pages.dev/">
+    <meta property="og:type" content="website">
+    <meta name="robots" content="index, follow">
+    <meta name="description" content="Ariel Sidney Castro Garcés is full-stack developer with a passion for creating intuitive and user-friendly web applications. He has have experience working with a variety of technologies, including React, Node.js, and MySQL, and he is always eager to learn new skills to improve my craft.">
+    <meta name="keywords" content="Ariel Sidney Castro Garcés portfolio web. Ariels875">
+    <meta property="og:title" content="Ariel Sidney Castro Garcés">
+    <meta property="og:description" content="I am Ariel Sidney Castro Garcés. Take a look at my portfolio website.">
+    <meta property="og:image" content="https://i.imgur.com/xt9G1DY.png">
+    <meta property="og:url" content="https://ariels.pages.dev/">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:image:alt" content="Portfolio de Ariel Sidney Castro Garcés">
+    <meta name="twitter:title" content="Ariel Sidney Castro Garcés Portfolio website.">
+    <meta name="twitter:description" content="I am Ariel Sidney Castro Garcés. Take a look at my portfolio website.">
+    <meta name="twitter:image" content="https://i.imgur.com/xt9G1DY.png">
+    <meta name="twitter:site" content="@Ariels875">
+    <meta name="twitter:creator" content="@Ariels875">
   </head>
   <body>
     <div id="root"></div>
