--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
     <meta name="twitter:image" content="https://i.imgur.com/xt9G1DY.png">
     <meta name="twitter:site" content="@Ariels875">
     <meta name="twitter:creator" content="@Ariels875">
+    <script>
+      document.documentElement.lang = navigator.language.substring(0, 2);
+    </script>
   </head>
   <body>
     <div id="root"></div>
